--- a/form.html
+++ b/form.html
@@ -38,6 +38,21 @@
         </p>
     </fieldset>
 
+    <fieldset>
+        <legend>Select your vorta</legend>
+        <p><label for="sorisa"><input type="checkbox" name="vorta" id="sorisa">Sorisa</label></p>
+        <p><label for="shutki"><input type="checkbox" name="vorta" id="shutki">Shutki</label></p>
+        <p><label for="begun"><input type="checkbox" name="vorta" id="begun">Begun</label></p>
+
+    </fieldset>
+
+    <p>Special Instruction
+        <br>
+        <textarea name="specialinstruction" id="" cols="30" rows="10"></textarea>
+    </p>
+
+    <button type="submit">Submit</button>
+    <button type="reset">Reset</button>
 
 </body>
 
