--- a/about.html
+++ b/about.html
@@ -5,8 +5,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="style.css">
-    <title>Milestone 2</title>
+    <title>About Us</title>
     <link rel="stylesheet" href="styles/nav.css">
 </head>
 
@@ -26,6 +25,7 @@
 
         </nav>
     </header>
+    <h1>About Us Page </h1>
 
 </body>
 
