--- a/form.html
+++ b/form.html
@@ -6,9 +6,25 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Form</title>
+    <link rel="stylesheet" href="styles/nav.css">
 </head>
 
 <body>
+    <header>
+        <nav>
+
+            <ul>
+
+                <li><a href="home.html">Home</a></li>
+                <li><a href="form.html">Form</a></li>
+                <li> <a href="table.html">Table</a></li>
+                <li><a href="semantic.html">Semantic</a></li>
+                <li><a href="about.html">About Us</a></li>
+
+            </ul>
+
+        </nav>
+    </header>
     <h1>Jamaler Ma Special TSC Pitha Expo</h1>
     <form action="">
 
