--- a/home.html
+++ b/home.html
@@ -5,8 +5,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="style.css">
-    <title>Milestone 2</title>
+    <title>Home</title>
     <link rel="stylesheet" href="styles/nav.css">
 </head>
 
@@ -25,6 +24,12 @@
             </ul>
 
         </nav>
+
+        <h1>Welcome to my home</h1>
+        <a href="form.html">Form</a>
+        <a href="table.html">Table</a>
+        <a href="semantic.html">Semantic</a>
+
     </header>
 
 </body>
