--- a/table.html
+++ b/table.html
@@ -5,12 +5,12 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="style.css">
-    <title>Milestone 2</title>
+    <title>Table</title>
     <link rel="stylesheet" href="styles/nav.css">
 </head>
 
 <body>
+
     <header>
         <nav>
 
@@ -26,6 +26,15 @@
 
         </nav>
     </header>
+
+    <h1>Table</h1>
+    <table>
+        <tr>
+            <td>hello</td>
+            <td>world</td>
+        </tr>
+
+    </table>
 
 </body>
 
